# schema-sample-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/schema_sample_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_schema_sample_check.py
